--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ License: For each use you must have a valid license purchased only from above li
 		<meta charset="utf-8" />
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Seven HTML Free - Bootstrap 5 HTML Multipurpose Light/Dark Admin Dashboard Theme" />
+		<meta property="og:title" content="Transaction Process" />
 		<meta property="og:url" content="https://keenthemes.com/products/seven-html-pro" />
 		<meta property="og:site_name" content="Keenthemes | Seven HTML Free" />
 		<link rel="canonical" href="Https://preview.keenthemes.com/seven-html-free" />
